# SoftwareRenderer

./: CMakeLists.txt  LICENSE  README.md
Core/: CMakeLists.txt
Core/rlogger/include/rlogger/: rlogger.h
Core/rlogger/src/: rlogger.c
Core/rmath/: CMakeLists.txt  README.md
Core/rmath/include/: rmath.h
Core/rmath/include/rmath/: common.h  types.h
Core/rmath/include/rmath/details/: define.h
Core/rmath/include/rmath/types/: mat4_double.h  vec3_double.h  vec4_double.h
Core/rmath/src/: common.c  rmath.c
Core/rmath/src/types/: mat4_double.c  vec3_double.c  vec4_double.c
Core/test/unity/: main.c
Test/: CMakeLists.txt  main.c
